Fix/menus go off screen sometimes (#312)
* Update antd to latest

* Manually set submenu offsets

* Fix bug

* Fix bug for Load Model too

--- a/src/components/HelpMenu/style.css
+++ b/src/components/HelpMenu/style.css
@@ -10,4 +10,7 @@
 .submenu {
     box-shadow: 0 1px 3px black;
     padding: 0;
+    width: fit-content;
+    right: 160px !important;
+    left: auto !important;
 }
